--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "element-ui": "^2.5.4",
     "iview": "^3.2.2",
+    "moment": "^2.24.0",
     "qs": "^6.6.0",
     "vue": "^2.5.2",
     "vue-piczoom": "^1.0.6",
